# reVoAgent

./: .env.development  .env.example  .gitignore  .gitmodules  =0.1.99  AI_INTEGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_STATUS.md  CHANGELOG.md  CLEANUP_COMPLETION_SUMMARY.md  CLEANUP_STATUS.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONSULTATION_ANALYSIS_COMPLETE.md  CONSULTATION_ANALYSIS_RESPONSE.md  CONSULTATION_COMPLIANCE_VERIFICATION.md  CORRECTED_STATUS_ANALYSIS.md  CRITICAL_BLOCKER_RESOLVED.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  DASHBOARD_README.md  DEEPSEEK_R1_INTEGRATION.md  DEPENDENCY_UPDATE_REPORT.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPLOYMENT_SUCCESS_REPORT.md  DETAILED_TECHNICAL_ROADMAP.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.memory  EMERGENCY_REFACTORING_COMPLETE.md  ENHANCED_DASHBOARD_FINAL_STATUS.md  ENHANCED_PORT_MANAGEMENT_SUMMARY.md  ENHANCED_THREE_ENGINE_SUCCESS_REPORT.md  ENHANCEMENT_IMPLEMENTATION_ROADMAP.md  ENTERPRISE_READINESS_100_PERCENT.md  FINAL_100_PERCENT_COMPLETION.md  FINAL_CLEANUP_SUCCESS.md  FINAL_ENHANCED_SYSTEM_STATUS.md  FINAL_PHASE_1_2_COMPLETION_REPORT.md  FINAL_STATUS_REPORT.md  (+228 more)
.github/: README.md  README_COMPLETE.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml  security-scan.yml
.openhands/microagents/: repo.md
apps/api/: main.py
apps/backend/: engine_api.py  enhanced_main.py  main.py  main_realtime.py  memory_api.py  requirements.txt  revo_websocket.py  three_engine_main.py
apps/cli/: main.py
archive/legacy_docs/: README_OLD_SIMPLE.md
archive/reports/: AGENT_DEVELOPMENT_STATUS.md  AGENT_INTEGRATION_COMPLETION_REPORT.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPLOYMENT_STATUS.md  ENTERPRISE_TRANSFORMATION_SUMMARY.md  FINAL_COMPREHENSIVE_ANALYSIS.md  FRONTEND_BACKEND_COMPLETION_ROADMAP.md  FRONTEND_BACKEND_INTEGRATION_REPORT.md  PHASE3_REALTIME_COMMUNICATION_REPORT.md  REALTIME_AI_INTEGRATION_GUIDE.md  (+5 more)
backup_before_refactoring/: backup_manifest.json  requirements-ai.txt
benchmark_reports/: service_benchmark_20250611_164039.json
config/: .encryption_key  agents.yaml  base.yaml  config.example.yaml  engines.yaml  enhanced_architecture.yaml  models.yaml  port_manager_config.yaml  production.yaml
database/: init.sql
deployment/: Dockerfile  docker-compose.yml
docker/: Dockerfile.coordinator  Dockerfile.creative-engine  Dockerfile.parallel-mind  Dockerfile.perfect-recall  docker-compose.production.yml
docs/: ARCHITECTURE.md  DASHBOARD_GUIDE.md  DEEPSEEK_R1_INTEGRATION.md  ENHANCED_PORT_MANAGEMENT.md  FRONTEND_GUIDE.md  INTEGRATION_REPORT.md  INTEGRATION_SUMMARY.md  PHASE4_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  THREE_ENGINE_ARCHITECTURE.md  TODAY_SUMMARY.md
frontend/: Dockerfile  index.html  package-fixed.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
k8s/: enhanced-autoscaling.yaml  enhanced-deployment.yaml  three-engine-deployment.yaml
monitoring/: advanced-dashboards.yml  alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  enhanced-alert-rules.yml  enhanced-prometheus.yml  grafana-dashboard.json  prometheus.yml
performance/: enhanced_final_optimization.py  enhanced_optimization_results_20250612_063205.json  final_optimization_results.json  final_performance_optimization.py  performance_tuning.py  performance_validation_results.json  production_performance_tuning.py  quick_performance_validation.py  ultimate_optimization.py  ultimate_optimization_results_20250612_063244.json
scripts/: README.md  cleanup_ports.sh  deploy_production.sh  enhanced_fullstack_startup.py  enhanced_port_manager.py  generate_security_report.py  install.sh  monitor_engines.py  port-manager.sh  port_manager.py  quick_setup.sh  reorganize_project.sh  setup_engines.sh  setup_environment.py  setup_environment.sh  start_enhanced_system.py  start_fullstack.sh  start_production.sh  start_realtime.sh  stop_fullstack.sh
security/: compliance_validation.py  penetration_testing.py  security_hardening.py  security_hardening_report.md  security_validation.py  security_validation_results.json
src/: __init__.py
tests/: README.md  frontend_backend_test_results.json  test_phase1_critical_hotspots.py  test_phase2_multi_agent_communication.py  test_phase3_external_integration_resilience.py  test_phase4_integration.py
(+454 files in other folders)
